Added new munerator modules

--- a/roles/munerator/tasks/main.yaml
+++ b/roles/munerator/tasks/main.yaml
@@ -4,6 +4,7 @@
 
 - name: install munerator
   pip: name=munerator state=latest
+  notify: restart munerator
 
 - name: munerator supervisor config
   template: src=munerator.conf dest=/etc/supervisor/conf.d/munerator.conf
