--- a/roles/munerator/templates/munerator.conf
+++ b/roles/munerator/templates/munerator.conf
@@ -1,5 +1,5 @@
 [group:munerator]
-programs: wrap_openarena,wrap_games,trans,context,old
+programs: wrap_openarena,wrap_games,trans,context,old,changer,rcon
 
 [program:wrap_openarena]
 user=openarena
@@ -20,3 +20,11 @@ command=munerator context
 [program:old]
 user=openarena
 command=munerator old
+
+[program:rcon]
+user=openarena
+command=munerator rcon --rcon-passwd {{ rcon_password }}
+
+[program:changer]
+user=openarena
+command=munerator changer
