--- a/roles/munerator/templates/munerator.conf
+++ b/roles/munerator/templates/munerator.conf
@@ -1,13 +1,13 @@
 [group:munerator]
-programs: wrap_openarena,wrap_games,trans,context,old,changer,rcon
+programs: wrap_openarena,wrap_games,trans,context,old,changer,rcon,restapi
 
 [program:wrap_openarena]
 user=openarena
-command=munerator wrap "tail -f /mnt/openarena/logs/openarena.log"
+command=munerator wrap "tail -n0 -F /mnt/openarena/logs/openarena.log"
 
 [program:wrap_games]
 user=openarena
-command=munerator wrap "tail -f /mnt/openarena/logs/games.log"
+command=munerator wrap "tail -n0 -F /mnt/openarena/logs/games.log"
 
 [program:trans]
 user=openarena
@@ -25,6 +25,12 @@ command=munerator old
 user=openarena
 command=munerator rcon --rcon-passwd {{ rcon_password }}
 
+[program:restapi]
+user=openarena
+command=munerator restapi
+autostart=true
+
 [program:changer]
 user=openarena
 command=munerator changer
+autostart=false
