--- a/roles/munerator/templates/munerator.conf
+++ b/roles/munerator/templates/munerator.conf
@@ -1,5 +1,5 @@
 [group:munerator]
-programs: wrap_openarena,wrap_games,trans,context,old,changer,rcon,restapi
+programs: wrap_openarena,wrap_games,trans,context,old,changer,rcon,restapi,store
 
 [program:wrap_openarena]
 user=openarena
@@ -34,3 +34,9 @@ autostart=true
 user=openarena
 command=munerator changer
 autostart=false
+
+[program:store]
+user=openarena
+command=munerator store 
+autostart=true
+
