--- a/roles/munerator/handlers/main.yaml
+++ b/roles/munerator/handlers/main.yaml
@@ -1,3 +1,3 @@
 ---
 - name: restart munerator
-  supervisorctl: name=munerator:* state=restarted
+  supervisorctl: name='munerator:' state=restarted
