--- a/roles/munerator/handlers/main.yaml
+++ b/roles/munerator/handlers/main.yaml
@@ -1,3 +1,6 @@
 ---
 - name: restart munerator
   supervisorctl: name='munerator:' state=restarted
+
+- name: restart mongodb
+  service: name=mongodb state=restarted
