--- a/roles/munerator/templates/munerator.conf
+++ b/roles/munerator/templates/munerator.conf
@@ -3,40 +3,37 @@ programs: wrap_openarena,wrap_games,trans,context,old,changer,rcon,restapi,store
 
 [program:wrap_openarena]
 user=openarena
-command=munerator wrap "tail -n0 -F /mnt/openarena/logs/openarena.log"
+command=nice -n5 munerator wrap "tail -n0 -F {{oa_base}}/logs/openarena.log"
 
 [program:wrap_games]
 user=openarena
-command=munerator wrap "tail -n0 -F /mnt/openarena/logs/games.log"
+command=nice -n5 munerator wrap "tail -n0 -F {{oa_base}}/logs/games.log"
 
 [program:trans]
 user=openarena
-command=munerator trans
+command=nice -n5 munerator trans
 
 [program:context]
 user=openarena
-command=munerator context
+command=nice -n5 munerator context
 
 [program:old]
 user=openarena
-command=munerator old
+command=nice -n5 munerator old
 
 [program:rcon]
 user=openarena
-command=munerator rcon --rcon-passwd {{ rcon_password }}
+command=nice -n5 munerator rcon --rcon-passwd {{ rcon_password }}
 
 [program:restapi]
 user=openarena
-command=munerator restapi
-autostart=true
+command=nice -n5 munerator restapi
 
 [program:changer]
 user=openarena
-command=munerator changer
+command=nice -n5 munerator changer
 autostart=false
 
 [program:store]
 user=openarena
-command=munerator store 
-autostart=true
-
+command=nice -n5 munerator store
