--- a/site.yml
+++ b/site.yml
@@ -10,6 +10,14 @@
     - secret_vars.yaml
 
   roles:
-    - { role: munerator, tags: ['munerator'] }
+    - { role: munerator, tags: ['munerator'], modules: ['old'] }
     - { role: openarena, tags: ['openarena'] }
     - { role: nginx, tags: ['nginx'] }
+
+- name: Openarena old
+  hosts: ijohan.nl
+  user: root
+  remote_user: johan
+  sudo: yes
+  roles:
+    - { role: munerator_new, tags: ['munerator'], modules: ['old'] }
