--- a/roles/munerator/templates/munerator.conf
+++ b/roles/munerator/templates/munerator.conf
@@ -1,5 +1,5 @@
 [group:munerator]
-programs: wrap_openarena,wrap_games,trans,context,old,changer,rcon,restapi,store
+programs: wrap_openarena,wrap_games,trans,context,changer,rcon,restapi,store
 
 [program:wrap_openarena]
 user=openarena
@@ -28,7 +28,6 @@ command=nice -n5 munerator restapi
 [program:changer]
 user=openarena
 command=nice -n5 munerator changer
-autostart=false
 
 [program:store]
 user=openarena
