--- a/roles/munerator/templates/munerator.conf
+++ b/roles/munerator/templates/munerator.conf
@@ -3,32 +3,32 @@ programs: wrap_openarena,wrap_games,trans,context,changer,rcon,restapi,store
 
 [program:wrap_openarena]
 user=openarena
-command=nice -n5 munerator wrap "tail -n0 -F {{oa_base}}/logs/openarena.log"
+command=nice -n5 /opt/munerator/bin/munerator wrap "tail -n0 -F {{oa_base}}/logs/openarena.log"
 
 [program:wrap_games]
 user=openarena
-command=nice -n5 munerator wrap "tail -n0 -F {{oa_base}}/logs/games.log"
+command=nice -n5 /opt/munerator/bin/munerator wrap "tail -n0 -F {{oa_base}}/logs/games.log"
 
 [program:trans]
 user=openarena
-command=nice -n5 munerator trans
+command=nice -n5 /opt/munerator/bin/munerator trans
 
 [program:context]
 user=openarena
-command=nice -n5 munerator context
+command=nice -n5 /opt/munerator/bin/munerator context
 
 [program:rcon]
 user=openarena
-command=nice -n5 munerator rcon --rcon-passwd {{ rcon_password }}
+command=nice -n5 /opt/munerator/bin/munerator rcon --rcon-passwd {{ rcon_password }}
 
 [program:restapi]
 user=openarena
-command=nice -n5 munerator restapi
+command=nice -n5 /opt/munerator/bin/munerator restapi
 
 [program:changer]
 user=openarena
-command=nice -n5 munerator changer
+command=nice -n5 /opt/munerator/bin/munerator changer
 
 [program:store]
 user=openarena
-command=nice -n5 munerator store
+command=nice -n5 /opt/munerator/bin/munerator store
