--- a/roles/nginx/templates/quake.conf
+++ b/roles/nginx/templates/quake.conf
@@ -16,8 +16,19 @@ server {
         root   /usr/share/nginx/html;
     }
 
-    location / {
+    # pass to munerator api
+    location /api/1 {
         proxy_pass http://localhost:8081;
+    }
+
+    # munerator index.html
+    location / {
+        root /opt/munerator/static/;
+    }
+
+    # munerator static files
+    location /assets/ {
+        alias /opt/munerator/static/;
     }
 
     location /stats {
