Fix static root

--- a/roles/nginx/templates/quake.conf
+++ b/roles/nginx/templates/quake.conf
@@ -23,7 +23,7 @@ server {
 
     # munerator index.html
     location / {
-        root /opt/munerator/static/;
+        root /opt/munerator/local/munerator/static/;
     }
 
     location /stats {
