Added linode host, refactor some stuff

--- a/roles/munerator/handlers/main.yaml
+++ b/roles/munerator/handlers/main.yaml
@@ -1,6 +1,9 @@
 ---
+- name: reread supervisor
+  command: supervisorctl reread
+
 - name: restart munerator
   supervisorctl: name='munerator:' state=restarted
 
 - name: restart mongodb
-  service: name=mongodb state=restarted
+  service: name=mongod state=restarted
