--- a/roles/nginx/templates/quake.conf
+++ b/roles/nginx/templates/quake.conf
@@ -7,7 +7,7 @@ server {
     server_name  quake.brensen.com;
 
     location /baseoa {
-        alias /mnt/openarena/baseoa;
+        alias {{oa_base}}/baseoa;
     }
 
     #error_page  404              /404.html;
@@ -27,12 +27,12 @@ server {
     }
 
     location /stats {
-        root /mnt/openarena/www;
+        root {{oa_base}}/www;
         index index.php;
     }
 
     location ~ \.php$ {
-        root /mnt/openarena/www;
+        root {{oa_base}}/www;
         #index index.php;
         #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
         include fastcgi_params;
