--- a/roles/openarena/templates/openarena.conf
+++ b/roles/openarena/templates/openarena.conf
@@ -1,7 +1,7 @@
 [program:openarena]
-environment=HOME="/mnt/openarena/"
-user=openarena
-directory=/mnt/openarena/
-command=/mnt/openarena/oa_ded.x86_64 +exec server.cfg +set net_port 1200
-stdout_logfile=/mnt/openarena/logs/openarena.log
+environment=HOME="{{oa_base}}/"
+user={{oa_user}}
+directory={{oa_base}}/
+command={{oa_base}}/openarena-0.8.8/oa_ded.x86_64 +exec server.cfg +set net_port 1200
+stdout_logfile={{oa_base}}/logs/openarena.log
 redirect_stderr=true
