--- a/roles/nginx/templates/quake.conf
+++ b/roles/nginx/templates/quake.conf
@@ -7,7 +7,7 @@ server {
     server_name  quake.brensen.com;
 
     location /baseoa {
-        alias {{oa_base}}/baseoa;
+        alias {{oa_base}}/openarena-0.8.8/baseoa;
     }
 
     #error_page  404              /404.html;
