Update games.log path

--- a/roles/munerator/templates/munerator.conf
+++ b/roles/munerator/templates/munerator.conf
@@ -7,7 +7,7 @@ command=nice -n5 /opt/munerator/bin/munerator wrap "tail -n0 -F {{oa_base}}/logs
 
 [program:wrap_games]
 user=openarena
-command=nice -n5 /opt/munerator/bin/munerator wrap "tail -n0 -F {{oa_base}}/logs/games.log"
+command=nice -n5 /opt/munerator/bin/munerator wrap "tail -n0 -F {{oa_base}}/.openarena/baseoa/games.log"
 
 [program:trans]
 user=openarena
